#dist_libexec_SCRIPTS =  # to omit subdir
nobase_dist_libexec_SCRIPTS = iron\
	iron/main\
	iron/iron-commands\
	iron/iron-completions\
	iron/iron-help\
	iron/iron-init\
	iron/iron-sh-shell\
	iron/iron-ca\
	iron/iron-certificate\
	iron/iron-client\
	iron/iron-service\
	iron/iron-keystore\
	iron/iron-pkcs12\
	iron/iron-debug
